--- a/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionHomeWork/gestion-homework/list-homework/list-homework.component.html
+++ b/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionHomeWork/gestion-homework/list-homework/list-homework.component.html
@@ -1,10 +1,24 @@
 <mat-card>
   <mat-card-header>
     <mat-form-field>
-      <input matInput (keyup)="filterChange($event)" placeholder="Enter the text" />
+      <input matInput class="w-100" (keyup)="filterChange($event)" placeholder="Filter par date ou sujet" />
     </mat-form-field>
     <div class="align">
-      <button mat-raised-button class="btn btn-primary" type="button" (click)="ajouterHomework()">Ajouter Homework</button>
+      <button class="button" (click)="ajouterHomework()">
+        <!-- SVG d'ajout -->
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 448 512"
+          class="svgIcon"
+        >
+          <path
+            fill="black"
+            d="M224 32C206.3 32 192 46.3 192 64V224H64C46.3 224 32 238.3 32 256C32 273.7 46.3 288 64 288H192V448C192 465.7 206.3 480 224 480C241.7 480 256 465.7 256 448V288H384C401.7 288 416 273.7 416 256C416 238.3 401.7 224 384 224H256V64C256 46.3 241.7 32 224 32z"
+          ></path>
+        </svg>
+      </button>
+
     </div>
   </mat-card-header>
   <mat-card-content>
