--- a/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionResultat/liste-resultat/liste-resultat.component.html
+++ b/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionResultat/liste-resultat/liste-resultat.component.html
@@ -2,18 +2,40 @@
  
   <mat-card-header class="d-flex justify-content-between align-items-center">
    
-    <div class="d-flex align-items-center justify-content-center flex-grow-1">
-      <select  class="form-select me-2" (change)="onSubjectChange($event.target)" name="idMatiere" placeholder="Nom Matiere" required>
-        <option value="" selected>Sélectionner une matière</option>
-        <option *ngFor="let matiere of matieres" [value]="matiere.nom">{{ matiere.nom }}</option>
-      </select>
-      <select (change)="onClassChange($event.target)" class="form-select" placeholder="Nom Classe">
-        <option value=""  selected>Sélectionner une classe</option>
-        <option *ngFor="let classe of classes" [value]="classe.id">{{ classe.nom }}</option>
-      </select>
+    <div class="margin-right-3">
+      <mat-form-field appearance="fill" class="w-100">
+        <mat-label>Matière</mat-label>
+        <mat-select [(ngModel)]="note.matiereNote" (selectionChange)="onSubjectChange($event)">
+          <mat-option value="">Sélectionner une matière</mat-option>
+          <mat-option *ngFor="let matiere of matieres" [value]="matiere.nom">{{ matiere.nom }}</mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
     <div>
-      <button mat-raised-button class="btn btn-primary" type="button" (click)="ajouterNote()">Ajouter Note</button>
+      <mat-form-field appearance="fill" class="w-100">
+        <mat-label>Classe</mat-label>
+        <mat-select [(ngModel)]="note.classe" (selectionChange)="onClassChange($event)">
+          <mat-option value="">Sélectionner une classe</mat-option>
+          <mat-option *ngFor="let classe of classes" [value]="classe.id">{{ classe.nom }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div>
+      <button class="button" (click)="ajouterNote()">
+        <!-- SVG d'ajout -->
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 448 512"
+          class="svgIcon"
+        >
+          <path
+            fill="black"
+            d="M224 32C206.3 32 192 46.3 192 64V224H64C46.3 224 32 238.3 32 256C32 273.7 46.3 288 64 288H192V448C192 465.7 206.3 480 224 480C241.7 480 256 465.7 256 448V288H384C401.7 288 416 273.7 416 256C416 238.3 401.7 224 384 224H256V64C256 46.3 241.7 32 224 32z"
+          ></path>
+        </svg>
+      </button>
+      
     </div>
   </mat-card-header>
   
