--- a/src/app/EduSchoolBackOffice/Components/gestionPedagogique/matiere/update-matiere/update-matiere.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPedagogique/matiere/update-matiere/update-matiere.component.html
@@ -1,3 +1,6 @@
+<div  routerLink="../matiere">
+  <mat-icon>arrow_back_ios</mat-icon>
+</div>
 <div class="registration-form">
   <form  [formGroup]="matiereForm">
 
