--- a/src/app/EduSchoolBackOffice/Components/gestionCantine/group-user/group-user.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionCantine/group-user/group-user.component.html
@@ -1,7 +1,11 @@
 <div class="container" style="margin-top:50px ;">
   <div class="row-2">
-    <h1>Responsable de la cantine  </h1>
-
+    <div  class="title-and-button">
+      <div  routerLink="../cantine">
+        <mat-icon>arrow_back_ios</mat-icon>
+      </div>
+    <h1 class="title">Responsable de la cantine  </h1>
+    </div>
       <div class="col">
           <div class="card custom-card">
             <div class="card-body  ">
@@ -12,6 +16,7 @@
             </div>
         </div>
        </div>
+       <br>
       <div class="col">
 
        <div class="table-responsive">
