--- a/src/app/EduSchoolBackOffice/Components/gestionPedagogique/matiere/add-matiere/add-matiere.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPedagogique/matiere/add-matiere/add-matiere.component.html
@@ -1,3 +1,7 @@
+<div  routerLink="../matiere">
+  <mat-icon>arrow_back_ios</mat-icon>
+</div>
+
 <div class="registration-form">
   <form  [formGroup]="matiereForm">
 
@@ -45,11 +49,8 @@
 
     <div class="form-row">
       <div class="col-md-12">
-          <label for="validationCustom04" class="form-label" >Ressources <span style="color: red;">*</span></label>
+          <label for="validationCustom04" class="form-label" >Ressources </label>
         <input type="text" class="form-control" formControlName="ressources" >
-      <div *ngIf="validateError('ressources','required') && submitted"  >
-        <div  class="alert alert-danger">Ressources est Obligatoire </div>
-      </div>
 
       </div>
     </div>
