--- a/src/app/EduSchoolBackOffice/Components/gestionPresence/my-request-leave/my-request-leave.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPresence/my-request-leave/my-request-leave.component.html
@@ -1,80 +1,30 @@
+
+
+
 <div class="content">
 
   <div class="container">
-    <h2 class="mb-5">Mes congés</h2>
-    <input type="text"   placeholder="recherche">
-
-
-
-
-
-
+    <div class="container">
+      <div class="title-and-button">
+        <h1 class="title">Listes des congés</h1>
+      </div>
+    </div>
     <div class="table-responsive">
-
-
-
-      <table class="table table-striped custom-table">
-        <thead>
-        <tr>
-
-
-
-          <th scope="col">date debut</th>
-          <th scope="col">date fin</th>
-          <th scope="col">message</th>
-          <th scope="col">Actions</th>
-          <th scope="col">Status</th>
-        </tr>
-        </thead>
-        <tbody>
-
-
-        <tr  >
-
-          <td class="pl-0">
-            06/05/2022
-          </td>
-
-          <td class="pl-0">10/05/2022</td>
-
-          <td>congé de maternite</td>
-          <td>
-
-            <button class="btn"><i class="fa fa-trash"></i></button>
-            <button class="btn1">edit</button>
-
-
-          </td>
-
-
-
-
-
-
-          <td>
-            rejected
-          </td>
-
-
-
-
-
-
-
-
-
-        </tr>
-
-
-
-
-
-        </tbody>
-      </table>
+      <app-table [tableData]="filteredData"
+                 [tableColumns]="leaveRequestTableColumns"
+                 [isFilterable]="true"
+                 [isPageable]="true"
+                 [isDetailIcon]="true"
+                 [paginationSizes]="[2,4,6]"
+                 [defaultPageSize]="4"
+                 (sort)="sortData($event)"
+                 [rowActionEditIcon]="'edit'"
+                 [rowActionDeleteIcon]="'delete'"
+                 [rowActionDetailIcon]="'remove_red_eye'"
+                 (rowDeleteAction)="deleteleave($event)"
+                 (rowEditAction)="openEditStatusDialog($event)">
+      </app-table>
     </div>
 
-
   </div>
-
-</div>
 
