--- a/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard-enseignant/dashboard-enseignant.component.html
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard-enseignant/dashboard-enseignant.component.html
@@ -1,15 +1,13 @@
-<mat-toolbar >
+<mat-toolbar>
     Dashboard Enseignant
-    <nav class="navbar navbar-expand bg-blue  navbar-light sticky-top px-4 py-0" >
-        <div class="navbar-nav align-items-center ">
-            
-        </div>
-
+    <nav class="navbar navbar-expand bg-blue navbar-light sticky-top px-4 py-0">
+      <div class="navbar-nav align-items-center">
+        <span class="navbar-text">
+          Bonjour, {{ firstname }}
+        </span>
+      </div>
     </nav>
-
-
-    
-</mat-toolbar>
+  </mat-toolbar>
 
 <mat-sidenav-container class="sidenav-container">
     <ng-content></ng-content>
