--- a/src/app/EduSchoolBackOffice/Components/Dashboards/user-list/user-list.component.css
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/user-list/user-list.component.css
@@ -19,4 +19,19 @@
   .error {
     color: red;
   }
+
+  .search-container{
+    display: flex ;
+    justify-content: flex-end;
+    margin-bottom:10px ;
+    margin-top:10px ;
+    margin-left: 800px;
+
+
+  }
+
+  .buttomadd {
+    border-radius: 15px;
+    margin-top:60px ;
+  }
   
