--- a/src/app/EduSchoolBackOffice/Components/Dashboards/user-list/user-list.component.html
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/user-list/user-list.component.html
@@ -1,27 +1,60 @@
+
+
 <div class="user-list-container">
-    <h2>All Users</h2>
-    <div *ngIf="error" class="error">
-      {{ error }}
-    </div>
-    <table *ngIf="users.length">
-      <thead>
-        <tr>
-          
-          <th>Email</th>
-          <th>Nom</th>
-          <th>Prénom</th>
-          <th>Rôle</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let user of users">
-         
-          <td>{{ user.email }}</td>
-          <td>{{ user.nom }}</td>
-          <td>{{ user.prenom }}</td>
-          <td>{{ user.role }}</td>
-        </tr>
-      </tbody>
-    </table>
+  <h2>All Users</h2>
+  <button mat-raised-button color="primary" routerLink="/registeradmin">Add User</button>
+  <button mat-raised-button color="accent" (click)="generatePDF()">Generate PDF</button>
+
+  <div class="search-container">
+    <mat-form-field>
+      <input matInput (input)="applyFilter($event)" placeholder="Rechercher">
+    </mat-form-field>
   </div>
+
+  <div *ngIf="error" class="error">
+    {{ error }}
+  </div>
+
+  <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="email">
+      <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
+      <mat-cell *matCellDef="let user"> {{ user.email }} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="nom">
+      <mat-header-cell *matHeaderCellDef> Nom </mat-header-cell>
+      <mat-cell *matCellDef="let user"> {{ user.nom }} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="prenom">
+      <mat-header-cell *matHeaderCellDef> Prénom </mat-header-cell>
+      <mat-cell *matCellDef="let user"> {{ user.prenom }} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="role">
+      <mat-header-cell *matHeaderCellDef> Rôle </mat-header-cell>
+      <mat-cell *matCellDef="let user"> {{ user.role }} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="isApproved">
+      <mat-header-cell *matHeaderCellDef> Approuvé </mat-header-cell>
+      <mat-cell *matCellDef="let user"> {{ user.isApproved ? 'Oui' : 'Non' }} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+      <mat-cell *matCellDef="let user">
+        <button mat-button (click)="approveUser(user.idUser)" *ngIf="!user.isApproved">Approuver</button>
+        <button mat-button (click)="rejectUser(user.idUser)" *ngIf="!user.isApproved">Rejeter</button>
+        <button mat-button (click)="deleteUser(user.idUser)">Delete</button>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+
+  </mat-table>
   
+  <mat-paginator [pageSizeOptions]="[2, 5, 10]" showFirstLastButtons></mat-paginator>
+</div>
