--- a/src/app/EduSchoolFrontOffice/Components/home-page/home-page.component.html
+++ b/src/app/EduSchoolFrontOffice/Components/home-page/home-page.component.html
@@ -28,7 +28,7 @@
       <a href="contact.html" class="nav-item nav-link" routerLink="contact">Contact</a>
     </div>
     <div class="nav-item px-2">
-      <button class="btn btn-primary py-2 px-4 d-flex align-items-center" >
+      <button class="btn btn-primary py-2 px-4 d-flex align-items-center" routerLink="register" >
         Préinscription
         <mat-icon>keyboard_arrow_right</mat-icon>
       </button>
