--- a/src/app/EduSchoolBackOffice/Components/Dashboards/user-list/user-list.component.html
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/user-list/user-list.component.html
@@ -58,3 +58,6 @@
   
   <mat-paginator [pageSizeOptions]="[2, 5, 10]" showFirstLastButtons></mat-paginator>
 </div>
+<div class="qr-code-container">
+  <img [src]="qrCodeImageUrl" alt="QR Code" *ngIf="qrCodeImageUrl">
+</div>
