--- a/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard-enseignant/dashboard-enseignant.component.html
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard-enseignant/dashboard-enseignant.component.html
@@ -1,115 +1,111 @@
 <mat-toolbar >
-    Dashboard Enseignant
-    <nav class="navbar navbar-expand bg-blue  navbar-light sticky-top px-4 py-0" >
-        <div class="navbar-nav align-items-center ">
-            <div class="nav-item dropdown " >
-                <a href="#" class="nav-link " data-bs-toggle="dropdown">
-                    <div class=" d-lg-inline-flex align-items-center " (click)="clearCount()">
-                        <mat-icon class="icon">notifications</mat-icon>
-                        <span class="badge ml-5 mb-2" *ngIf="badgeCount >= 0"  (click)="reload()">{{badgeCount}}</span>
-                        <span   (click)="reload()">Notifications   </span>
-                    </div>
+  Bienvenue {{user.nom}}  {{user.prenom}}
+  <nav class="navbar navbar-expand bg-blue  navbar-light sticky-top px-4 py-0" >
+      <div class="navbar-nav align-items-center ">
+          <div class="nav-item dropdown " >
+              <!-- <a href="#" class="nav-link " data-bs-toggle="dropdown">
+                  <div class=" d-lg-inline-flex align-items-center " (click)="clearCount()">
+                      <mat-icon class="icon">notifications</mat-icon>
+                      <span class="badge ml-5 mb-2" *ngIf="badgeCount >= 0"  (click)="reload()">{{badgeCount}}</span>
+                      <span   (click)="reload()">Notifications   </span>
+                  </div>
 
-                </a>
-                <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-                    <a class="dropdown-item">
-                        <ng-container >
+              </a> -->
+              <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
+                  <a class="dropdown-item">
+                      <ng-container >
 
-                            <h4 class="fw-normal mb-0">test</h4>
-                            <small>test</small> <br>
-                            <small>date</small> : <small>test</small><br>
-                            <small>Status</small> : <small>test</small><br>
-                            <small>Action</small> :
-                            <button mat-icon-button color="warn" matTooltip="Supprimer"
-                                aria-label="Button that displays a tooltip when focused or hovered over"
-                               >
-                                <mat-icon>delete</mat-icon>
-                            </button>
-                            <button mat-icon-button color="bg-light" matTooltip="marquer comme lue"
-                                aria-label="Button that displays a tooltip when focused or hovered over"
-                               >
-                                <mat-icon>check_circle</mat-icon>
-                            </button>
+                          <h4 class="fw-normal mb-0">test</h4>
+                          <small>test</small> <br>
+                          <small>date</small> : <small>test</small><br>
+                          <small>Status</small> : <small>test</small><br>
+                          <small>Action</small> :
+                          <button mat-icon-button color="warn" matTooltip="Supprimer"
+                              aria-label="Button that displays a tooltip when focused or hovered over"
+                             >
+                              <mat-icon>delete</mat-icon>
+                          </button>
+                          <button mat-icon-button color="bg-light" matTooltip="marquer comme lue"
+                              aria-label="Button that displays a tooltip when focused or hovered over"
+                             >
+                              <mat-icon>check_circle</mat-icon>
+                          </button>
 
-                        </ng-container>
-                    </a>
-                </div>
-            </div>
-        </div>
+                      </ng-container>
+                  </a>
+              </div>
+          </div>
+      </div>
 
-    </nav>
-    <button mat-icon-button *ngIf="sidenav.mode === 'over'" (click)="sidenav.toggle()">
-        <mat-icon *ngIf="!sidenav.opened">
-            menu
-        </mat-icon>
-        <mat-icon *ngIf="sidenav.opened">
-            close
-        </mat-icon>
-    </button>
+  </nav>
+  <button mat-icon-button *ngIf="sidenav.mode === 'over'" (click)="sidenav.toggle()">
+      <mat-icon *ngIf="!sidenav.opened">
+          menu
+      </mat-icon>
+      <mat-icon *ngIf="sidenav.opened">
+          close
+      </mat-icon>
+  </button>
 
 
 </mat-toolbar>
 
 <mat-sidenav-container class="sidenav-container">
-    <ng-content></ng-content>
-    <mat-sidenav #sidenav="matSidenav" class="sidenav" mode="side" opened>
-        <button mat-button class="menu-button" routerLink="">
-            <mat-icon>home</mat-icon>
-            <span>Accueil</span>
-        </button>
-        <mat-divider></mat-divider>
-        <button class="menu-button" [routerLink]="['profilens/:id']">
-            <mat-icon>person</mat-icon>
-            <span>Profile</span>
-        </button>
+  <ng-content></ng-content>
+  <mat-sidenav #sidenav="matSidenav" class="sidenav" mode="side" opened>
+      <button mat-button class="menu-button" routerLink="">
+          <mat-icon>home</mat-icon>
+          <span>Accueil</span>
+      </button>
+      <mat-divider></mat-divider>
+      <button class="menu-button" [routerLink]="['profilens/:id']">
+          <mat-icon>person</mat-icon>
+          <span>Profile</span>
+      </button>
 
 
-        <mat-divider></mat-divider>
+      <mat-divider></mat-divider>
 
-        <button mat-button class="menu-button" [matMenuTriggerFor]="menu1">
-            <mat-icon>school</mat-icon>
-            <span>Gestion Pédagogique</span>
-            <mat-menu #menu1="matMenu">
-                <button mat-menu-item routerLink="statuscour">Matière</button>
-                <button mat-menu-item routerLink="addcour">HomeWork</button>
-                <button mat-menu-item routerLink="addcour">Resultat</button>
-            </mat-menu>
-        </button>
-        <mat-divider></mat-divider>
-        <button mat-button class="menu-button" [matMenuTriggerFor]="menu">
-            <mat-icon>domain_disabled</mat-icon>
-            <span>Gestion des congés</span>
-            <mat-menu #menu="matMenu">
-                <button mat-menu-item routerLink="My-request">Mes Congés</button>
-                <button mat-menu-item routerLink="Request-leave">Ajouter congés</button>
-            </mat-menu>
-        </button>
-        <mat-divider></mat-divider>
-        <button mat-button class="menu-button" routerLink="absenceeleves">
-            <mat-icon>no_meeting_room</mat-icon>
-            <span>Gestion des absences</span>
-        </button>
-        <mat-divider></mat-divider>
-        <button mat-button class="menu-button" routerLink="noteeleve">
-            <mat-icon>border_color</mat-icon>
-            <span>Gestion des Notes</span>
-        </button>
-        <mat-divider></mat-divider>
-        <button mat-button class="menu-button" routerLink="calender">
-            <mat-icon>calendar_today</mat-icon>
-            <span>Emploi de Temps</span>
-        </button>
-        <mat-divider></mat-divider>
-        <button mat-button class="menu-button" (click)="logout()">
-            <mat-icon>exit_to_app</mat-icon>
-            <span>Déconnexion</span>
-        </button>
-    </mat-sidenav>
-    <mat-sidenav-content class="sidenav-content">
-        <div class="content">
-            <main>
-                <router-outlet></router-outlet>
-            </main>
-        </div>
-    </mat-sidenav-content>
+      <button mat-button class="menu-button" routerLink="emplois-temps">
+        <mat-icon>calendar_today</mat-icon>
+        <span>Emplois de Temps</span>
+      </button>
+      <mat-divider></mat-divider>
+      <button mat-button class="menu-button" routerLink="enseignant-classe">
+        <mat-icon>person</mat-icon>
+        <span>Enseignants</span>
+      </button>
+      <mat-divider></mat-divider>
+      <button mat-button class="menu-button" routerLink="user_menu">
+        <mat-icon> fastfood</mat-icon>
+          <span> Cantine</span>
+      </button>
+      <mat-divider></mat-divider>
+      <button mat-button class="menu-button" routerLink="absenceeleves">
+          <mat-icon>no_meeting_room</mat-icon>
+          <span>voir absences</span>
+      </button>
+      <mat-divider></mat-divider>
+      <button mat-button class="menu-button" routerLink="noteeleve">
+          <mat-icon>border_color</mat-icon>
+          <span>Consulter les  Notes</span>
+      </button>
+      <mat-divider></mat-divider>
+      <button mat-button class="menu-button" routerLink="reclamation">
+        <mat-icon> <img src="../../../../../assets/img/claim.png" alt=""></mat-icon>
+          <span> Réclamation</span>
+      </button>
+      <mat-divider></mat-divider>
+      <button mat-button class="menu-button" (click)="logout()">
+          <mat-icon>exit_to_app</mat-icon>
+          <span>Déconnexion</span>
+      </button>
+  </mat-sidenav>
+  <mat-sidenav-content class="sidenav-content">
+      <div class="content">
+          <main>
+              <router-outlet></router-outlet>
+          </main>
+      </div>
+  </mat-sidenav-content>
 </mat-sidenav-container>
