--- a/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/emplois-temps/emplois-temps.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/emplois-temps/emplois-temps.component.html
@@ -3,7 +3,7 @@
 
       <div class="col-md-9">
         <div class="title-and-button">
-          <div  routerLink="../detail-classe">
+          <div *ngIf="role=='ADMINISTRATEUR'" routerLink="../detail-classe">
             <mat-icon>arrow_back_ios</mat-icon>
           </div>
           <h1 class="title">Emplois du temps de la classe <span class="fw-bold">{{classe.nom}}</span>  </h1>
