--- a/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/list-classe/list-classe.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/list-classe/list-classe.component.html
@@ -19,7 +19,7 @@
               (sort)="sortData($event)"
               [rowActionEditIcon]="'edit'"
               [rowActionDeleteIcon]="'delete'"
-              [rowActionDetailIcon]="'remove_red_eye'"
+              [rowActionDetailIcon]="'dehaze'"
               (rowEditAction)="editerClasse($event)"
               (rowDetailAction)="detailClasse($event)"
               (rowDeleteAction)="deleteClasse($event)">
