--- a/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard-eleve/dashboard-eleve.component.html
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard-eleve/dashboard-eleve.component.html
@@ -91,7 +91,7 @@
             <span>Consulter les  Notes</span>
         </button>
         <mat-divider></mat-divider>
-        <button mat-button class="menu-button" routerLink="reclamation">
+        <button mat-button class="menu-button" routerLink="user_reclamation">
           <mat-icon> <img src="../../../../../assets/img/claim.png" alt=""></mat-icon>
             <span> Réclamation</span>
         </button>
