--- a/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.html
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.html
@@ -105,6 +105,12 @@
           <span>Gestion Salle</span>
       </button>
       <mat-divider></mat-divider>
+
+      <button mat-button class="menu-button" routerLink="user_reclamation">
+        <mat-icon> <img src="../../../../../assets/img/claim.png" alt=""></mat-icon>
+          <span> Réclamation</span>
+      </button>
+      <mat-divider></mat-divider>
       <button mat-button class="menu-button" (click)="navigateToUserList()">
         <mat-icon>person_outline</mat-icon>
         <span>Gestion Comptes</span>
