--- a/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard-eleve/dashboard-eleve.component.html
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard-eleve/dashboard-eleve.component.html
@@ -96,6 +96,11 @@
             <span> Réclamation</span>
         </button>
         <mat-divider></mat-divider>
+        <button mat-button class="menu-button" routerLink="rdv">
+          <mat-icon> meeting></mat-icon>
+            <span> Rendez-vous</span>
+        </button>
+        <mat-divider></mat-divider>
         <button mat-button class="menu-button" (click)="logout()">
             <mat-icon>exit_to_app</mat-icon>
             <span>Déconnexion</span>
