--- a/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard-enseignant/dashboard-enseignant.component.html
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard-enseignant/dashboard-enseignant.component.html
@@ -63,17 +63,16 @@
           <span>Profile</span>
       </button>
 
-
       <mat-divider></mat-divider>
 
+      <button mat-button class="menu-button" routerLink="enseignant-classe">
+        <mat-icon>school</mat-icon>
+        <span>classes</span>
+      </button>
+      <mat-divider></mat-divider>
       <button mat-button class="menu-button" routerLink="emplois-temps">
         <mat-icon>calendar_today</mat-icon>
         <span>Emplois de Temps</span>
-      </button>
-      <mat-divider></mat-divider>
-      <button mat-button class="menu-button" routerLink="enseignant-classe">
-        <mat-icon>person</mat-icon>
-        <span>Enseignants</span>
       </button>
       <mat-divider></mat-divider>
       <button mat-button class="menu-button" routerLink="user_menu">
